--- a/2025/day12/Cargo.toml
+++ b/2025/day12/Cargo.toml
@@ -2,3 +2,9 @@
 name = "day12"
 version = "0.1.0"
 edition = "2024"
+
+[dependencies]
+crossterm = "0.29.0"
+dialoguer = "0.12.0"
+rand = "0.9.2"
+scarlet = "1.2.0"
