--- a/2015/day18/Cargo.toml
+++ b/2015/day18/Cargo.toml
@@ -2,3 +2,9 @@
 name = "day18"
 version = "0.1.0"
 edition = "2024"
+
+[features]
+visualize = ["screen"]
+
+[dependencies]
+screen = { path = "../../lib/screen", optional = true }
