--- a/lib/screen/.vscode/settings.json
+++ b/lib/screen/.vscode/settings.json
@@ -3,6 +3,5 @@
     "editor.defaultFormatter": "rust-lang.rust-analyzer",
     "editor.formatOnSave": true
   },
-  "rust-analyzer.check.command": "clippy",
-  "rust-analyzer.cargo.features": ["visualize"]
+  "rust-analyzer.check.command": "clippy"
 }
