--- a/2016/day22/.vscode/settings.json
+++ b/2016/day22/.vscode/settings.json
@@ -3,5 +3,6 @@
     "editor.defaultFormatter": "rust-lang.rust-analyzer",
     "editor.formatOnSave": true
   },
-  "rust-analyzer.check.command": "clippy"
+  "rust-analyzer.check.command": "clippy",
+  "rust-analyzer.cargo.features": ["visualize"]
 }
