--- a/2016/day22/Cargo.toml
+++ b/2016/day22/Cargo.toml
@@ -3,5 +3,10 @@ name = "day22"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+visualize = ["scarlet", "screen"]
+
 [dependencies]
 rustc-hash = "2.1.1"
+scarlet = { version = "1.2.0", optional = true }
+screen = { path = "../../lib/screen", optional = true }
