--- a/2018/day16/Cargo.toml
+++ b/2018/day16/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "day16"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
-enum-iterator = "1.5.0"
+rustc-hash = "2.1.1"
