--- a/2018/day18/Cargo.toml
+++ b/2018/day18/Cargo.toml
@@ -3,5 +3,9 @@ name = "day18"
 version = "0.1.0"
 edition = "2024"
 
+[features]
+visualize = ["screen"]
+
 [dependencies]
 rustc-hash = "2.1.1"
+screen = { path = "../../lib/screen", optional = true }
